adding comments and changing the personality assigning logic in the PersonalityClassifier